ffi/poc/cpp/corpus/include/ak_abi.h


typedef int32_t (*ak_transcode_fn)(const void *src, size_t len, uint8_t *dst, int32_t cap, ak_grow_fn grow, void *sink);
struct ak_str {
  const void *data;
  size_t len;
  ak_transcode_fn tc;
};
typedef struct ak_str ak_str;
struct ak_span {
  uint32_t off;
  uint32_t len;
  uint32_t coder;
};
typedef struct ak_span ak_span;
struct ak_blob {
  const void *data;
  size_t len;
};
typedef struct ak_blob ak_blob;
struct ak_unk_buf {
  void *data;
  uint32_t len;
  uint32_t cap;
};
typedef struct ak_unk_buf ak_unk_buf;
struct ak_efix_Timestamp {
  int64_t seconds;
  int32_t nanos;
  uint32_t presence;
};
struct ak_dfix_Timestamp {
  int64_t seconds;
  int32_t nanos;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
struct ak_ufix_Timestamp {
  int64_t seconds;
  int32_t nanos;
  struct ak_blob unknown;
  uint32_t presence;
};
struct ak_efix_Duration {
  int64_t seconds;
  int32_t nanos;
  uint32_t presence;
};
struct ak_dfix_Duration {
  int64_t seconds;
  int32_t nanos;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
struct ak_ufix_Duration {
  int64_t seconds;
  int32_t nanos;
  struct ak_blob unknown;
  uint32_t presence;
};
struct ak_efix_TaskOptions {
  struct ak_efix_Duration max_duration;
  int32_t max_retries;
  int32_t priority;
  struct ak_str partition_id;
  struct ak_str application_name;
  struct ak_str application_version;
  struct ak_str application_namespace;
  struct ak_str application_service;
  struct ak_str engine_type;
  uint32_t presence;
};
struct ak_dfix_TaskOptions {
  struct ak_dfix_Duration max_duration;
  int32_t max_retries;
  int32_t priority;
  struct ak_span partition_id;
  struct ak_span application_name;
  struct ak_span application_version;
  struct ak_span application_namespace;
  struct ak_span application_service;
  struct ak_span engine_type;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
struct ak_ufix_TaskOptions {
  struct ak_ufix_Duration max_duration;
  int32_t max_retries;
  int32_t priority;
  struct ak_str partition_id;
  struct ak_str application_name;
  struct ak_str application_version;
  struct ak_str application_namespace;
  struct ak_str application_service;
  struct ak_str engine_type;
  struct ak_blob unknown;
  uint32_t presence;
};
struct ak_efix_TaskSummary {
  struct ak_str id;
  struct ak_str session_id;
  struct ak_efix_TaskOptions options;
  int32_t status;
  struct ak_efix_Timestamp created_at;
  struct ak_str error;
  struct ak_str status_message;
  int64_t count_data_dependencies;
  uint32_t presence;
};
struct ak_dfix_TaskSummary {
  struct ak_span id;
  struct ak_span session_id;
  struct ak_dfix_TaskOptions options;
  int32_t status;
  struct ak_dfix_Timestamp created_at;
  struct ak_span error;
  struct ak_span status_message;
  int64_t count_data_dependencies;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
struct ak_ufix_TaskSummary {
  struct ak_str id;
  struct ak_str session_id;
  struct ak_ufix_TaskOptions options;
  int32_t status;
  struct ak_ufix_Timestamp created_at;
  struct ak_str error;
  struct ak_str status_message;
  int64_t count_data_dependencies;
  struct ak_blob unknown;
  uint32_t presence;
};
struct ak_efix_Empty {
  uint32_t presence;
};
struct ak_dfix_Empty {
  struct ak_unk_buf unknown;
  uint32_t presence;
};
struct ak_ufix_Empty {
  struct ak_blob unknown;
  uint32_t presence;
};
struct ak_efix_Probe {
  struct ak_str id;
  int32_t opt_count;
  struct ak_str opt_label;
  uint8_t opt_flag;
  uint32_t body_case;
  int64_t body_as_int;
  struct ak_str body_as_text;
  struct ak_str body_as_blob;
  struct ak_efix_Timestamp body_as_stamp;
  struct ak_efix_Empty body_as_nothing;
  uint32_t presence;
};
struct ak_dfix_Probe {
  struct ak_span id;
  int32_t opt_count;
  struct ak_span opt_label;
  uint8_t opt_flag;
  uint32_t body_case;
  int64_t body_as_int;
  struct ak_span body_as_text;
  struct ak_span body_as_blob;
  struct ak_dfix_Timestamp body_as_stamp;
  struct ak_dfix_Empty body_as_nothing;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
struct ak_ufix_Probe {
  struct ak_str id;
  int32_t opt_count;
  struct ak_str opt_label;
  uint8_t opt_flag;
  uint32_t body_case;
  int64_t body_as_int;
  struct ak_str body_as_text;
  struct ak_str body_as_blob;
  struct ak_ufix_Timestamp body_as_stamp;
  struct ak_ufix_Empty body_as_nothing;
  struct ak_blob unknown;
  uint32_t presence;
};
struct ak_efix_UploadResultData {
  struct ak_str session_id;
  struct ak_str result_id;
  struct ak_str data_chunk;
  uint32_t presence;
};
struct ak_dfix_UploadResultData {
  struct ak_span session_id;
  struct ak_span result_id;
  struct ak_span data_chunk;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
struct ak_ufix_UploadResultData {
  struct ak_str session_id;
  struct ak_str result_id;
  struct ak_str data_chunk;
  struct ak_blob unknown;
  uint32_t presence;
};
struct ak_efix_MetricsBatch {
  struct ak_str id;
  uint32_t presence;
};
struct ak_dfix_MetricsBatch {
  struct ak_span id;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
struct ak_ufix_MetricsBatch {
  struct ak_str id;
  struct ak_blob unknown;
  uint32_t presence;
};
struct ak_efix_Pair {
  struct ak_str key;
  int32_t value;
  uint32_t presence;
};
struct ak_dfix_Pair {
  struct ak_span key;
  int32_t value;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
struct ak_ufix_Pair {
  struct ak_str key;
  int32_t value;
  struct ak_blob unknown;
  uint32_t presence;
};
struct ak_efix_ListResultsResponse {
  int32_t page;
  int32_t total;
  uint32_t presence;
};
struct ak_dfix_ListResultsResponse {
  int32_t page;
  int32_t total;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
struct ak_ufix_ListResultsResponse {
  int32_t page;
  int32_t total;
  struct ak_blob unknown;
  uint32_t presence;
};
struct ak_efix_ListTasksDetailedResponse {
  int32_t page;
  int32_t total;
  uint32_t presence;
};
struct ak_dfix_ListTasksDetailedResponse {
  int32_t page;
  int32_t total;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
struct ak_ufix_ListTasksDetailedResponse {
  int32_t page;
  int32_t total;
  struct ak_blob unknown;
  uint32_t presence;
};
struct ak_efix_ListTaskSummaryResponse {
  uint32_t presence;
};
struct ak_dfix_ListTaskSummaryResponse {
  struct ak_unk_buf unknown;
  uint32_t presence;
};
struct ak_ufix_ListTaskSummaryResponse {
  struct ak_blob unknown;
  uint32_t presence;
};
struct ak_efix_ListProbeResponse {
  uint32_t presence;
};
struct ak_dfix_ListProbeResponse {
  struct ak_unk_buf unknown;
  uint32_t presence;
};
struct ak_ufix_ListProbeResponse {
  struct ak_blob unknown;
  uint32_t presence;
};
struct ak_efix_ListMetricsResponse {
  uint32_t presence;
};
struct ak_dfix_ListMetricsResponse {
  struct ak_unk_buf unknown;
  uint32_t presence;
};
struct ak_ufix_ListMetricsResponse {
  struct ak_blob unknown;
  uint32_t presence;
};
struct ak_efix_UploadResultDataMessage {
  struct ak_efix_UploadResultData upload;
  uint32_t presence;
};
struct ak_dfix_UploadResultDataMessage {
  struct ak_dfix_UploadResultData upload;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
struct ak_ufix_UploadResultDataMessage {
  struct ak_ufix_UploadResultData upload;
  struct ak_blob unknown;
  uint32_t presence;
};
struct ak_efix_DualResponse {
  uint32_t presence;
};
struct ak_dfix_DualResponse {
  struct ak_unk_buf unknown;
  uint32_t presence;
};
struct ak_ufix_DualResponse {
  struct ak_blob unknown;
  uint32_t presence;
};
struct ak_efix_ChunkLeaf {
  struct ak_str k;
  int32_t v;
  uint32_t presence;
};
struct ak_dfix_ChunkLeaf {
  struct ak_span k;
  int32_t v;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
struct ak_ufix_ChunkLeaf {
  struct ak_str k;
  int32_t v;
  struct ak_blob unknown;
  uint32_t presence;
};
struct ak_efix_ChunkInner {
  uint32_t presence;
};
struct ak_dfix_ChunkInner {
  struct ak_unk_buf unknown;
  uint32_t presence;
};
struct ak_ufix_ChunkInner {
  struct ak_blob unknown;
  uint32_t presence;
};
struct ak_efix_ChunkElement {
  struct ak_str id;
  struct ak_efix_ChunkInner inner;
  uint32_t presence;
};
struct ak_dfix_ChunkElement {
  struct ak_span id;
  struct ak_dfix_ChunkInner inner;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
struct ak_ufix_ChunkElement {
  struct ak_str id;
  struct ak_ufix_ChunkInner inner;
  struct ak_blob unknown;
  uint32_t presence;
};
struct ak_efix_ChunkedResponse {
  int32_t page;
  uint32_t presence;
};
struct ak_dfix_ChunkedResponse {
  int32_t page;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
struct ak_ufix_ChunkedResponse {
  int32_t page;
  struct ak_blob unknown;
  uint32_t presence;
};
struct ak_efix_ChunkedResponseWide {
  uint32_t presence;
};
struct ak_dfix_ChunkedResponseWide {
  struct ak_unk_buf unknown;
  uint32_t presence;
};
struct ak_ufix_ChunkedResponseWide {
  struct ak_blob unknown;
  uint32_t presence;
};
struct ak_efix_LeafElement {
  struct ak_str id;
  int64_t n;
  struct ak_efix_Timestamp stamp;
  uint32_t presence;
};
struct ak_dfix_LeafElement {
  struct ak_span id;
  int64_t n;
  struct ak_dfix_Timestamp stamp;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
struct ak_ufix_LeafElement {
  struct ak_str id;
  int64_t n;
  struct ak_ufix_Timestamp stamp;
  struct ak_blob unknown;
  uint32_t presence;
};
struct ak_efix_LeafResponse {
  uint32_t presence;
};
struct ak_dfix_LeafResponse {
  struct ak_unk_buf unknown;
  uint32_t presence;
};
struct ak_ufix_LeafResponse {
  struct ak_blob unknown;
  uint32_t presence;
};
struct ak_efix_SurrogateInner {
  struct ak_str text;
  uint32_t presence;
};
struct ak_dfix_SurrogateInner {
  struct ak_span text;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
struct ak_ufix_SurrogateInner {
  struct ak_str text;
  struct ak_blob unknown;
  uint32_t presence;
};
struct ak_efix_Surrogate {
  struct ak_str text;
  struct ak_efix_SurrogateInner nested;
  struct ak_str raw;
  uint32_t presence;
};
struct ak_dfix_Surrogate {
  struct ak_span text;
  struct ak_dfix_SurrogateInner nested;
  struct ak_span raw;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
struct ak_ufix_Surrogate {
  struct ak_str text;
  struct ak_ufix_SurrogateInner nested;
  struct ak_str raw;
  struct ak_blob unknown;
  uint32_t presence;
};