ffi/poc/csharp/src/Corpus/Generated/Abi.cs


[StructLayout(LayoutKind.Sequential)]
public struct ak_efix_TaskSummary
{
    public ak_str id;
    public ak_str session_id;
    public ak_efix_TaskOptions options;
    public int status;
    public ak_efix_Timestamp created_at;
    public ak_str error;
    public ak_str status_message;
    public long count_data_dependencies;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_dfix_TaskSummary
{
    public ak_span id;
    public ak_span session_id;
    public ak_dfix_TaskOptions options;
    public int status;
    public ak_dfix_Timestamp created_at;
    public ak_span error;
    public ak_span status_message;
    public long count_data_dependencies;
    public ak_unk_buf unknown;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_ufix_TaskSummary
{
    public ak_str id;
    public ak_str session_id;
    public ak_ufix_TaskOptions options;
    public int status;
    public ak_ufix_Timestamp created_at;
    public ak_str error;
    public ak_str status_message;
    public long count_data_dependencies;
    public ak_blob unknown;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_efix_Empty
{
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_dfix_Empty
{
    public ak_unk_buf unknown;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_ufix_Empty
{
    public ak_blob unknown;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_efix_Probe
{
    public ak_str id;
    public int opt_count;
    public ak_str opt_label;
    public byte opt_flag;
    public uint body_case;
    public long body_as_int;
    public ak_str body_as_text;
    public ak_str body_as_blob;
    public ak_efix_Timestamp body_as_stamp;
    public ak_efix_Empty body_as_nothing;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_dfix_Probe
{
    public ak_span id;
    public int opt_count;
    public ak_span opt_label;
    public byte opt_flag;
    public uint body_case;
    public long body_as_int;
    public ak_span body_as_text;
    public ak_span body_as_blob;
    public ak_dfix_Timestamp body_as_stamp;
    public ak_dfix_Empty body_as_nothing;
    public ak_unk_buf unknown;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_ufix_Probe
{
    public ak_str id;
    public int opt_count;
    public ak_str opt_label;
    public byte opt_flag;
    public uint body_case;
    public long body_as_int;
    public ak_str body_as_text;
    public ak_str body_as_blob;
    public ak_ufix_Timestamp body_as_stamp;
    public ak_ufix_Empty body_as_nothing;
    public ak_blob unknown;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_efix_UploadResultData
{
    public ak_str session_id;
    public ak_str result_id;
    public ak_str data_chunk;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_dfix_UploadResultData
{
    public ak_span session_id;
    public ak_span result_id;
    public ak_span data_chunk;
    public ak_unk_buf unknown;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_ufix_UploadResultData
{
    public ak_str session_id;
    public ak_str result_id;
    public ak_str data_chunk;
    public ak_blob unknown;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_efix_MetricsBatch
{
    public ak_str id;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_dfix_MetricsBatch
{
    public ak_span id;
    public ak_unk_buf unknown;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_ufix_MetricsBatch
{
    public ak_str id;
    public ak_blob unknown;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_efix_Pair
{
    public ak_str key;
    public int value;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_dfix_Pair
{
    public ak_span key;
    public int value;
    public ak_unk_buf unknown;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_ufix_Pair
{
    public ak_str key;
    public int value;
    public ak_blob unknown;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_efix_ListResultsResponse
{
    public int page;
    public int total;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_dfix_ListResultsResponse
{
    public int page;
    public int total;
    public ak_unk_buf unknown;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_ufix_ListResultsResponse
{
    public int page;
    public int total;
    public ak_blob unknown;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_efix_ListTasksDetailedResponse
{
    public int page;
    public int total;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_dfix_ListTasksDetailedResponse
{
    public int page;
    public int total;
    public ak_unk_buf unknown;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_ufix_ListTasksDetailedResponse
{
    public int page;
    public int total;
    public ak_blob unknown;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_efix_ListTaskSummaryResponse
{
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_dfix_ListTaskSummaryResponse
{
    public ak_unk_buf unknown;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_ufix_ListTaskSummaryResponse
{
    public ak_blob unknown;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_efix_ListProbeResponse
{
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_dfix_ListProbeResponse
{
    public ak_unk_buf unknown;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_ufix_ListProbeResponse
{
    public ak_blob unknown;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_efix_ListMetricsResponse
{
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_dfix_ListMetricsResponse
{
    public ak_unk_buf unknown;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_ufix_ListMetricsResponse
{
    public ak_blob unknown;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_efix_UploadResultDataMessage
{
    public ak_efix_UploadResultData upload;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_dfix_UploadResultDataMessage
{
    public ak_dfix_UploadResultData upload;
    public ak_unk_buf unknown;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_ufix_UploadResultDataMessage
{
    public ak_ufix_UploadResultData upload;
    public ak_blob unknown;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_efix_DualResponse
{
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_dfix_DualResponse
{
    public ak_unk_buf unknown;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_ufix_DualResponse
{
    public ak_blob unknown;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_efix_ChunkLeaf
{
    public ak_str k;
    public int v;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_dfix_ChunkLeaf
{
    public ak_span k;
    public int v;
    public ak_unk_buf unknown;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_ufix_ChunkLeaf
{
    public ak_str k;
    public int v;
    public ak_blob unknown;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_efix_ChunkInner
{
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_dfix_ChunkInner
{
    public ak_unk_buf unknown;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_ufix_ChunkInner
{
    public ak_blob unknown;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_efix_ChunkElement
{
    public ak_str id;
    public ak_efix_ChunkInner inner;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_dfix_ChunkElement
{
    public ak_span id;
    public ak_dfix_ChunkInner inner;
    public ak_unk_buf unknown;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_ufix_ChunkElement
{
    public ak_str id;
    public ak_ufix_ChunkInner inner;
    public ak_blob unknown;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_efix_ChunkedResponse
{
    public int page;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_dfix_ChunkedResponse
{
    public int page;
    public ak_unk_buf unknown;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_ufix_ChunkedResponse
{
    public int page;
    public ak_blob unknown;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_efix_ChunkedResponseWide
{
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_dfix_ChunkedResponseWide
{
    public ak_unk_buf unknown;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_ufix_ChunkedResponseWide
{
    public ak_blob unknown;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_efix_LeafElement
{
    public ak_str id;
    public long n;
    public ak_efix_Timestamp stamp;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_dfix_LeafElement
{
    public ak_span id;
    public long n;
    public ak_dfix_Timestamp stamp;
    public ak_unk_buf unknown;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_ufix_LeafElement
{
    public ak_str id;
    public long n;
    public ak_ufix_Timestamp stamp;
    public ak_blob unknown;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_efix_LeafResponse
{
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_dfix_LeafResponse
{
    public ak_unk_buf unknown;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_ufix_LeafResponse
{
    public ak_blob unknown;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_efix_SurrogateInner
{
    public ak_str text;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_dfix_SurrogateInner
{
    public ak_span text;
    public ak_unk_buf unknown;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_ufix_SurrogateInner
{
    public ak_str text;
    public ak_blob unknown;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_efix_Surrogate
{
    public ak_str text;
    public ak_efix_SurrogateInner nested;
    public ak_str raw;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_dfix_Surrogate
{
    public ak_span text;
    public ak_dfix_SurrogateInner nested;
    public ak_span raw;
    public ak_unk_buf unknown;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_ufix_Surrogate
{
    public ak_str text;
    public ak_ufix_SurrogateInner nested;
    public ak_str raw;
    public ak_blob unknown;
    public uint presence;
}
